tg_parser/tests/type_errors/multi_index.tg
gate INV(in a; out y) {
    pmos drain=y, gate=a, source=VDD;
    nmos drain=y, gate=a, source=GND;
}
circuit C(in a[4]; out y) {
    wire w;
    INV g1(a[1][0]) -> y;
}
